# logos_lrb

./: .gitignore  AUDIT_REPORT.md  Cargo.toml  LOGOS_LRB_FULL_BOOK.md  README.md
configs/: keys.env.example  proxy.env.example
configs/env/: node-a.env.example  node-b.env.example  node-c.env.example  node.env.example
core/: beta_rollout.yaml  offline_resonance.py  onboarding_sim.py  onboarding_ui.py  rLGN_converter.py  resonance_analyzer.py  rid_builder.py  ritual_quest.py
data.sled.bak/: db  snap.0000000000001C67
docs/: LOGOS_LRB_BOOK_2025-09-07T14-13-01Z.txt  LOGOS_LRB_FULL_BOOK.md  LOGOS_LRB_FULL_BOOK_2025-09-18T07-58-28Z.md  LOGOS_LRB_FULL_BOOK_2025-09-18T08-05-35Z.md  LOGOS_LRB_FULL_BOOK_2025-09-18T08-13-55Z.md  LOGOS_LRB_FULL_BOOK_2025-09-18T08-28-23Z.md  LOGOS_LRB_FULL_BOOK_2025-09-18T08-38-56Z.md  LOGOS_LRB_FULL_BOOK_2025-09-18T08-51-17Z.md  LOGOS_LRB_FULL_BOOK_2025-09-18T10-16-59Z.md  LOGOS_LRB_FULL_BOOK_2025-09-18T11-37-16Z.md  LOGOS_LRB_FULL_BOOK_2025-09-18T12-37-01Z.md  LOGOS_LRB_FULL_BOOK_2025-09-18T14-27-33Z.md  LOGOS_LRB_FULL_BOOK_2025-09-18T16-28-37Z.md  LOGOS_LRB_FULL_BOOK_2025-09-19T02-39-45Z.md  LOGOS_LRB_FULL_BOOK_2025-09-19T03-25-36Z.md  LOGOS_LRB_FULL_BOOK_2025-09-19T03-53-25Z.md  LOGOS_LRB_FULL_BOOK_2025-09-19T06-47-32Z.md  LOGOS_LRB_FULL_BOOK_2025-09-20T14-14-42Z.md  LOGOS_LRB_FULL_BOOK_2025-09-24T14-37-48Z.md  LOGOS_LRB_FULL_BOOK_2025-09-25T03-04-37Z.md  LOGOS_LRB_FULL_BOOK_2025-09-26T11-15-33Z.md  LOGOS_LRB_FULL_BOOK_2025-10-06T07-48-53Z.md  LOGOS_LRB_FULL_BOOK_2025-10-06T08-26-28Z.md  LRB_FULL_LIVE_2025-09-06T11:46:29Z.txt  LRB_FULL_LIVE_2025-09-06T11:58:18Z.txt  LRB_FULL_LIVE_2025-09-06T12:02:21Z.txt  LRB_FULL_LIVE_2025-09-06T12:06:38Z.txt  LRB_FULL_LIVE_2025-09-07.txt  LRB_SNAPSHOT_20250904_1426.txt  REPO_ROOTS_2025-10-05_16-59-36.txt  WORKFLOW.md  architecture.md
docs/LOGOS_BLOCK_PRODUCER/: LOGOS_BLOCK_PRODUCER_SNAPSHOT_2025-11-30T09-53-35Z.md
docs/LOGOS_LRB_BOOK/: BOOK_configs_2025-10-05_16-54-43.md  BOOK_configs_2025-10-05_17-01-07.md  BOOK_configs_2025-10-05_17-02-28.md  BOOK_configs_2025-10-05_17-04-12.md  BOOK_configs_2025-10-05_17-09-14.md  BOOK_configs_env_2025-10-05_17-09-14.md  BOOK_core_2025-10-05_16-54-43.md  BOOK_infra_2025-10-05_16-54-43.md  BOOK_infra_nginx_2025-10-05_17-09-14.md  BOOK_infra_systemd_2025-10-05_17-09-14.md  BOOK_lrb_core_2025-10-05_16-54-43.md  BOOK_lrb_core_2025-10-05_17-09-14.md  BOOK_node_2025-10-05_16-54-43.md  BOOK_node_2025-10-05_17-06-51.md  BOOK_node_2025-10-05_17-09-14.md  BOOK_scripts_2025-10-05_16-54-43.md  BOOK_tools_2025-10-05_16-54-43.md  BOOK_tools_go_test_2025-10-05_17-09-14.md  BOOK_tools_load_2025-10-05_17-09-14.md  BOOK_wallet-proxy_2025-10-05_16-54-43.md  BOOK_wallet-proxy_2025-10-05_17-09-14.md  BOOK_www_2025-10-05_16-54-43.md  BOOK_www_2025-10-05_17-09-14.md  BOOK_www_explorer_2025-10-05_17-09-14.md  BOOK_www_wallet_2025-10-05_17-09-14.md  LOGOS_LRB_BOOK.md  LOGOS_LRB_FULL_PRODUCT_BOOK_2025-10-05_16-06-03.md
docs/LOGOS_RESONANCE_CORE/: LOGOS_RESONANCE_CORE_SNAPSHOT_2025-12-01T14-14-46Z.md
docs/snapshots/: LRB_FULL_LIVE_20250905_1218.txt
infra/nginx/: logos-api-lb.conf.example  lrb_wallet.conf  lrb_wallet.conf.sample
infra/systemd/: exec.conf  keys.conf  keys.env.example  logos-healthcheck.service  logos-healthcheck.timer  logos-node.service  logos-node.service.sample  logos-node@.service  logos-snapshot.service  logos-snapshot.timer  lrb-proxy.service  lrb-proxy.service.sample  lrb-scanner.service  lrb-scanner.service.sample  override.conf  runas.conf  security.conf  tuning.conf  zz-consensus.conf  zz-keys.conf
lrb_core/: Cargo.toml
lrb_core/src/: anti_replay.rs  beacon.rs  crypto.rs  dynamic_balance.rs  heartbeat.rs  ledger.rs  lib.rs  nano.114024.save  phase_consensus.rs  phase_filters.rs  phase_integrity.rs  quorum.rs  rcp_engine.rs  resonance.rs  sigpool.rs  spam_guard.rs  types.rs
modules/: beacon_emitter.rs  env_impact_tracker.py  external_phase_broadcaster.rs  external_phase_link.rs  genesis_fragment_seeds.rs  go_to_market.yaml  heartbeat_monitor.rs  legacy_migrator.rs  maintenance_strategy.yaml  resonance_analytics_frontend.tsx  resonance_emergency_plan.yaml  resonance_meshmap.yaml  resonance_tutor.py  ritual_engine.rs  symbolic_parser.py  uplink_controller.rs  uplink_router.rs
modules/x_guard/: Cargo.toml
node/: Cargo.toml  build.rs
node/openapi/: openapi.json
node/src/: admin.rs  api.rs  auth.rs  bridge.rs  bridge_journal.rs  fork.rs  gossip.rs  guard.rs  health.rs  lib.rs  main.rs  metrics.rs  openapi.json  openapi.rs  payout_adapter.rs  peers.rs  stake_claim.rs  state.rs  storage.rs  version.rs
node/src/api/: archive.rs  base.rs  mod.rs  staking.rs  tx.rs
node/src/archive/: mod.rs  pg.rs  sqlite.rs
node/src/openapi/: openapi.json
scripts/: bootstrap_node.sh  collect_and_push.sh  logos_healthcheck.sh
src/: lib.rs
src/core/: biosphere_scanner.rs  dao.rs  logos_self.rs  phase.rs  resonance.rs  tx_spam_guard.rs
src/utils/: filters.rs  frequency.rs  math.rs  types.rs
tools/: admin_cli.sh  book_make.sh  book_restore.sh  gen_full_codemap.py  k6_smoke.js  load_healthz.sh  lrb_audit.sh  make_block_producer_snapshot.sh  make_book_and_push.sh  make_codebook.sh  make_deploy_infra_snapshot.sh  make_explorer_snapshot.sh  make_front_stack_snapshot.sh  make_full_book.sh  make_full_snapshot_live.sh  make_resonance_core_snapshot.sh  make_wallet_explorer_snapshot.sh  make_wallet_snapshot.sh  make_web_stack_snapshot.sh  prepare_payer.sh  repo_audit.sh  targets.jsonl  test_tx.sh  tx_load.sh  tx_one.sh  vegeta_submit.sh  vegeta_submit_live.sh
tools/go_test/: go.mod  main.go  two_rids.go
tools/load/: go.mod  load_submit_tx.go
wallet-proxy/: app.py  requirements.txt  scanner.py
www/explorer/: explorer.css  explorer.js  index.html
www/shared/: i18n.js  wallet-theme.css  wallet-theme.css.bak_2025-12-12_122041
www/wallet/: app.css  app.css.bak_2025-12-12_122041  app.html  app.html.bak_2025-12-12_122041  app.js  auth.css  auth.css.bak_2025-12-12_122041  auth.html  (+8 more)
Документы/: LOGOS_LRB_AUDIT_2025-09-25T02-57-15Z.md  LOGOS_LRB_AUDIT_2025-09-25T03-23-17Z.md
(+9 files in other folders)
