[workspace]
members = ["lrb_core", "node"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Proprietary"
name = "logos_lrb_workspace"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
blake3 = "1"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["serde"] }
rand = "0.8"
rand_core = "0.6"
sled = "0.34"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
hyper = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
time = "0.3"
base64 = "0.22"
hex = "0.4"
