[workspace]
members = ["lrb_core","node"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"

[workspace.dependencies]
# web/async
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.40", features = ["full"] }

# core utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.6"
time = { version = "0.3", features = ["macros"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# crypto / hash / codecs
ring = "0.17"
rand = "0.8"
ed25519-dalek = { version = "2.2", default-features = false, features = ["rand_core","std"] }
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"
uuid = { version = "1.8", features = ["v4"] }
bincode = "1.3"
jsonwebtoken = "9"

# storage / http
sled = "0.34"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls","http2","json"] }
