[package]
name = "lrb_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
blake3 = { workspace = true }
bs58 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
sled = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
base64.workspace = true
hex.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10.9"
