[package]
name = "lrb_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sled = "0.34"

ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"

rayon = "1.10"

# криптография
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
blake3 = "1"

# async / сеть (для beacon.rs)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# утилиты
uuid = { version = "1", features = ["v4"] }
