[package]
name = "logos_node"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# базовые
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }

# web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# локальные
lrb_core = { path = "../lrb_core" }

# крипто/кодеки/хэши/jwt
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }

# утилиты/структуры/метрики/сеть
parking_lot = "0.12"
once_cell = "1.19"
dashmap = "5.5"
ipnet = "2.10"
prometheus = "0.13"
reqwest = { workspace = true }

# ---- ARCHIVER: SQLite & Postgres (выровнено) ----
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

tokio-postgres = { version = "0.7", features = ["runtime","with-uuid-1"] }
deadpool-postgres = "0.12"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = []
